--- a/portfolio.html
+++ b/portfolio.html
@@ -26,30 +26,30 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+        <img src="assets/images/bake.jpg" id="cake" alt="dessert">
 
-        <h3>Hangman</h3>
+        <h3>Baking</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/computers.jpg" id="coding" alt="technology">
 
-        <h3>RPG Game</h3>
+        <h3>Technology</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/travel.jpg" id="fly" alt="travel">
 
-        <h3>Trivia Game</h3>
+        <h3>Travel</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="assets/images/outdoor.jpg" id="outdoor" alt="outdoor">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Nature</h3>
       </div>
-      <div class="work">
+      <!-- <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
-      </div>
+      </div> -->
 
     </section>
 
